Fix question and icon overlap in FAQuestion v2

--- a/src/MainPage/Questions/FAQuestion/index.css
+++ b/src/MainPage/Questions/FAQuestion/index.css
@@ -24,7 +24,7 @@ section.faq div.container div h3.question button {
   padding: 0;
   margin: 0;
   align-items: center;
-  margin-right: 26px;
+  margin-right: 52px;
 }
 
 section.faq div.container div h3.question button:hover {
